# picante

./: .gitignore  Cargo.toml  README.md  README.md.in
.config/: dodeca.styx
.config/captain/: config.styx
.config/tracey/: config.styx
.facet-dev-templates/: readme-footer.md
.github/workflows/: release-plz.yml
crates/picante/: CHANGELOG.md  Cargo.toml
crates/picante-macros/: CHANGELOG.md  Cargo.toml
crates/picante-macros/src/: db.rs
crates/picante/src/: facet_eq.rs  inflight.rs  persist.rs  wal.rs
crates/picante/src/ingredient/: derived.rs  input.rs  interned.rs  mod.rs
crates/picante/tests/: basic.rs  inflight_dedup.rs  macros.rs  persist.rs  snapshot.rs
docs/: macro-design.md
